my first changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="cover-content">
             <h1>It's Time For Hiking</h1>
-            <h2>Lorem, ipsum dolor.</h2>
+            <h2>Hiking is a travel blog </h2>
             <a href="#">Read more</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quisquam commodi, neque voluptatum illum modi omnis. Eos, illum dicta. Nihil.</p>
         </div>
